--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,16 +1,24 @@
 @font-face {
   font-family: 'Pacifico';
-  src: url('../font/Pacifico-Regular.ttf') format('woff'),
+  src: url('../font/Pacifico-Regular.ttf') format('woff');
+}
+
+@font-face {
+  font-family: 'Poetsen One';
+  src: url('../font/PoetsenOne-Regular.ttf') format('woff');
 }
 
 * {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-
 body {
-  background-color: #ccc;
-  height:80vh;
   overflow:hidden
+}
+a {
+  text-decoration: none;
+  color: black;
 }
 
 img {
@@ -23,7 +31,9 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
+  color: #333333;
+  /* background-color: #fff; */
 }
 
 .david {
@@ -34,25 +44,24 @@ img {
   margin:auto;
   width: 60vw;
   background-color: #fff;
-  border-radius: 20px;
+  border-radius: 70px;
   min-width: 500px;
+  -webkit-box-shadow: 0px 0px 0px 20px rgba(0, 0, 0, 1);
+  -moz-box-shadow: 0px 0px 0px 20px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 0px 20px rgba(0, 0, 0, 1);
 }
 
 .container-title {
   width: 100%;
   margin: 0px;
   text-align: center;
+  font-size: 2em;
 }
 
 .container-logo {
   width: 100%;
   margin: 0px 0px 30px 0px;
   text-align: center;
-  /* color: transparent; */
-  /* background-repeat: no-repeat;   */
-  /* background-image: url("../img/react_kawaii.png"); */
-  /* background-position: center; */
-  /* line-height:10; */
 }
 
 .container-gallery {
@@ -62,15 +71,29 @@ img {
 
 .container-project {
   width: 20vw;
-  margin: 10px 0px 10px 0px;
+  margin: 10px 10px 10px 10px;
+  padding: 10px;
   justify-content:center;
   align-self: center;
   text-align: center;
   min-width: 150px;
 }
 
+.box-shadow-tight {
+  -webkit-box-shadow: inset 0px 0px 0px 5px rgba(0, 0, 0, 1);
+  -moz-box-shadow: inset 0px 0px 0px 5px rgba(0, 0, 0, 1);
+  box-shadow: inset 0px 0px 0px 5px rgba(0, 0, 0, 1);
+  border-radius: 30px;
+}
+
 .pacifico-regular {
   font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poetsen-one-regular {
+  font-family: "Poetsen One", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
